Additional depth, new styling.

--- a/styl.css
+++ b/styl.css
@@ -1,82 +1,83 @@
-.content {
+/* General */
+
+*{
+	box-sizing: border-box;
+	font-family: arial, tahoma, verdana, sans-serif;
+}
+
+#menu {
 	width: 980px;
-	margin: 0 auto;
-  padding-top: 100px;
+	margin: 100px auto 0px auto;
 }
 
 /* Navigation */
 
-nav {
-  margin: 0;
-  padding: 0;
-  width: 980px;
-  height: 30px;
-  background-color: #7e7e7e;
-}
-
 nav ul {
-  background-color: #7e7e7e;
-  position: relative;
   display: inline-block;
-  margin: 0;
   padding: 0;
 }
 
 nav ul li {
-  display: block;
-  float: left;
+	display: block;
   position: relative;
-  width: 195px;
+  float: left;
+	background-color: #00b200;
+	border: solid #fff;
+	border-width: 0 1px 0 0;
+  width: 190px; /* 980px : 5 */
+	height: 30px;
+	border-radius: 5px;
+}
+
+nav ul li a {
+	display: block;
+	text-align: center;
+	padding: 3px 0 0 0;
+  color: #fff;
+  text-decoration: none;
+  font-size: 1.2em;
+  font-weight: bold;
+	height: 30px;
+}
+
+a:hover, a:focus, a:active {
+  color: #7e7e7e;
 }
 
 /* Sub-navigation */
 
 nav ul li ul {
   position: absolute;
-  background-color: #cc0000;
+	display: none;
 }
 
 nav ul li ul li {
-  position: relative;
-  margin: 0;
-  padding: 0;
-  display: block;
-}
+	display: block;
+	background-color: #cc0000;
+	height: 24px;
+	border: solid #fff;
+	border-width: 1px 1px 0 0;
 
-nav a {
-  color: #fff;
-  text-decoration: none;
-  display: block;
-  font-size: 1.2em;
-  text-align: center;
-  font-weight: bold;
-  font-family: arial, tahoma, verdana, sans-serif;
-  padding-top: 3px;
-  padding-bottom: 3px;
-}
-
-nav a:hover,
-nav a:focus,
-nav a:active {
-  color:#000;
 }
 
 nav ul li ul li a {
-  border-bottom:solid 1px #fff;
-  padding:0;
+  padding: 3px 0 0 0;
   font-size: 0.9em;
-  padding-top: 2px;
-  padding-bottom: 2px;
 }
 
-nav ul li ul li:last-child a {
-  border-bottom: none;
+/* Third level-navigation */
+
+nav ul li ul li ul {
+  position: absolute;
+	display: none;
+	left: 196px;
+	top: 0;
 }
 
-ul.submenu {
-  display: none;
-}
-
-.dropdown {
-border-left:solid 1px #fff;
+nav ul li ul li ul li {
+	display: block;
+	height: 24px;
+	background-color: #0000ff;
+	border: solid #fff;
+	border-width: 0 0 1px 0;
 }
